# edwinxu-agent

./: .gitignore  DESIGN.md  README.md  environment.yml
apps/cli/: pyproject.toml  requirements.txt  setup.cfg
apps/cli/agent_cli/: cli.py
apps/web/: .env.local.example  package-lock.json  package.json
apps/web/app/: Markdown.tsx  globals.css  layout.tsx  page.tsx  theme.tsx
apps/web/app/settings/: page.tsx
scripts/: bootstrap.sh  dev-all.sh  dev-backend.sh  dev-web.sh
services/agent-api/: .env.example  requirements.txt
services/agent-api/app/: agent.py  builtin_tools.py  config.py  db.py  events.py  main.py  mcp_connector.py  models.py  providers.py  skills_registry.py
services/mcp-servers/stocks/: README.md  package-lock.json  package.json  tsconfig.json
services/mcp-servers/stocks/src/: index.ts
